--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/angular": "^1.5.16",
     "@types/angular-mocks": "^1.5.5",
     "@types/chai": "^3.4.34",
+    "@types/isomorphic-fetch": "0.0.31",
     "@types/jsdom": "^2.0.29",
     "@types/mocha": "^2.2.32",
     "@types/rx": "^2.5.33",
@@ -27,6 +28,7 @@
     "angular-mocks": "^1.5.8",
     "chai": "^3.5.0",
     "jsdom": "^9.6.0",
+    "jsdom-global": "^2.1.0",
     "mocha": "^3.1.0",
     "rollup": "^0.36.1",
     "rx": "^4.1.0",
@@ -36,6 +38,7 @@
     "typescript": "^2.0.3"
   },
   "dependencies": {
-    "angular": "^1.5.8"
+    "angular": "^1.5.8",
+    "isomorphic-fetch": "^2.2.1"
   }
 }
