--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "utility lib for using RxJS with angular1",
   "main": "index.js",
   "scripts": {
-    "build:rx4:es6": "tsc src/rxjs4/index.ts",
-    "test": "mocha --opts mocha.opts --watch"
+    "prebuild": "rimraf ./dist",
+    "build": "npm-run-all -p build:*",
+    "build:es6": "tsc -p src/ -m es6 -t es6 --outDir ./dist/es6",
+    "build:cjs": "tsc -p src/ -m commonjs -t es5 --outDir ./dist/cjs",
+    "test": "mocha --opts mocha.opts"
   },
   "keywords": [
     "rx",
@@ -23,22 +26,23 @@
     "@types/isomorphic-fetch": "0.0.31",
     "@types/jsdom": "^2.0.29",
     "@types/mocha": "^2.2.32",
-    "@types/rx": "^2.5.33",
     "@types/sinon": "^1.16.31",
+    "angular": "^1.5.8",
     "angular-mocks": "^1.5.8",
     "chai": "^3.5.0",
+    "isomorphic-fetch": "^2.2.1",
     "jsdom": "^9.6.0",
     "jsdom-global": "^2.1.0",
     "mocha": "^3.1.0",
-    "rollup": "^0.36.1",
-    "rx": "^4.1.0",
-    "rxjs": "^5.0.0-beta.12",
+    "npm-run-all": "^3.1.1",
+    "rimraf": "^2.5.4",
+    "rxjs": "^5.0.0-rc.1",
     "sinon": "^1.17.6",
     "ts-node": "^1.4.1",
     "typescript": "^2.0.3"
   },
-  "dependencies": {
+  "peerDependencies": {
     "angular": "^1.5.8",
-    "isomorphic-fetch": "^2.2.1"
+    "rxjs": "^5.0.0-rc.1"
   }
 }
