--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,26 +1,13 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "module": "commonjs",
     "moduleResolution": "node",
     "noImplicitAny": true,
     "strictNullChecks": false,
     "outDir": "./dist",
-    "declaration": true,
-    "sourceMap": true,
+    "pretty": true,
     "types": [
       "mocha",
-      "angular",
-      "angular-mocks",
       "node"
-    ],
-    "baseUrl": "node_modules",
-    "paths": {
-      "rx": ["rx/rx", "rx/ts/rx"]
-    },
-    "lib": [
-      "dom",
-      "es2016"
     ]
   },
   "exclude": [
