add fetch properly

--- a/package.json
+++ b/package.json
@@ -22,14 +22,13 @@
     "@types/angular": "^1.5.16",
     "@types/angular-mocks": "^1.5.5",
     "@types/chai": "^3.4.34",
-    "@types/isomorphic-fetch": "0.0.31",
     "@types/jsdom": "^2.0.29",
     "@types/mocha": "^2.2.32",
     "@types/sinon": "^1.16.31",
+    "@types/whatwg-fetch": "0.0.32",
     "angular": "^1.5.8",
     "angular-mocks": "^1.5.8",
     "chai": "^3.5.0",
-    "isomorphic-fetch": "^2.2.1",
     "jsdom": "^9.6.0",
     "jsdom-global": "^2.1.0",
     "mocha": "^3.1.0",
